# LEMath

./: CMakeLists.txt  CMakeSettings.json  googletest.cmake  readme.md
include/: LEFloatMatrix3x3.h  LEFloatMatrix4x4.h  LEFloatVector2.h  LEFloatVector3.h  LEFloatVector4.h  LEHalfVector2.h  LEHalfVector4.h  LEIntVector2.h  LEIntVector3.h  LEIntVector4.h  LEMath  LEMathCommon.h  LEMathDataContainer.h  LEMathPlatform.h  LEMathUtil.h  LEQuaternion.h
source/: CMakeLists.txt  LEFloatMatrix4x4.cpp  LEFloatVector2.cpp  LEFloatVector3.cpp  LEFloatVector4.cpp  LEHalfVector2.cpp  LEHalfVector4.cpp  LEIntVector2.cpp  LEIntVector3.cpp  LEIntVector4.cpp  LEQuaternion.cpp
test/: CMakeLists.txt  test.cpp
